add display books method to js filel

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
   <div class="container">
     <h1>Library App</h1>
+    <hr />
+    <div id="container"></div>
   </div>
   <script src="script.js"></script>
 </body>
