Add remove button, first iteration

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
   <div class="container">
     <h1>Library App</h1>
-    <button type="button" class="btn btn-primary mb-2" data-toggle="modal" data-target="#exampleModal">
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
       Add Book
     </button>
-    <div id="container"></div>
+    <div class='mt-5' id="container"></div>
   </div>
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
