Add columns corresponding to arguments

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <form>
+          <form class="book-form">
             <div class="form-group">
               <label for="author">Author</label>
               <input type="text" class="form-control" id="author" aria-describedby="authorHelp" placeholder="Enter author name">
