--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
                     <form class="book-form">
                         <div class="form-group">
                             <label for="author">Author</label>
-                            <input type="text" class="form-control" id="author" aria-describedby="authorHelp" placeholder="Enter author name">
+                            <input type="text" class="form-control" id="author" aria-describedby="author" placeholder="Enter author name">
                         </div>
                         <div class="form-group">
                             <label for="title">Title</label>
-                            <input type="text" class="form-control" id="title" aria-describedby="titleHelp" placeholder="Enter title of book">
+                            <input type="text" class="form-control" id="title" aria-describedby="title" placeholder="Enter title of book">
                         </div>
                         <div class="form-group">
                             <label for="pages">No. of pages</label>
-                            <input type="text" class="form-control" id="pages" aria-describedby="pagesHelp" placeholder="Enter number of pages">
+                            <input type="text" class="form-control" id="pages" aria-describedby="pages" placeholder="Enter number of pages">
                         </div>
                     </form>
                 </div>
