refactor code with factoy function pattern

--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
 </head>
 
 <body>
+    <!-- As a heading -->
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">Navbar</span>
+        </div>
+    </nav>
+
     <div class="container">
         <h1>Library App</h1>
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-      Add Book
-    </button>
-        <div class='mt-5' id="container"></div>
+        <button type="button" class="btn btn-primary mt-2" data-toggle="modal" data-target="#exampleModal">
+            Add Book
+          </button>
+        <div class='mt-4' id="container"></div>
     </div>
+
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
