--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
 <body>
     <!-- As a heading -->
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-light bg-dark">
         <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">Navbar</span>
+            <span class="navbar-brand mb-0 h1 text-white">Navbar</span>
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container mt-4">
         <h1>Library App</h1>
         <button type="button" class="btn btn-primary mt-2" data-toggle="modal" data-target="#exampleModal">
             Add Book
@@ -26,27 +26,27 @@
         <div class='mt-4' id="container"></div>
     </div>
 
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade rounded" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header bg-dark text-light">
                     <h5 class="modal-title" id="exampleModalLabel">Add Book</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
+                    <button type="button" class="close text-light" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true" >&times;</span>
           </button>
                 </div>
                 <div class="modal-body">
-                    <form class="book-form">
+                    <form class="book-form mx-2">
                         <div class="form-group">
-                            <label for="author">Author</label>
+                            <label for="author" class="font-weight-bold">Author</label>
                             <input type="text" class="form-control" id="author" aria-describedby="author" placeholder="Enter author name">
                         </div>
                         <div class="form-group">
-                            <label for="title">Title</label>
+                            <label for="title" class="font-weight-bold">Title</label>
                             <input type="text" class="form-control" id="title" aria-describedby="title" placeholder="Enter title of book">
                         </div>
                         <div class="form-group">
-                            <label for="pages">No. of pages</label>
+                            <label for="pages" class="font-weight-bold">No. of pages</label>
                             <input type="text" class="form-control" id="pages" aria-describedby="pages" placeholder="Enter number of pages">
                         </div>
                     </form>
