--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <!-- As a heading -->
-    <nav class="navbar navbar-light bg-dark">
+    <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1 text-white">Navbar</span>
+            <span class="navbar-brand mb-0 h1">Navbar</span>
         </div>
     </nav>
 
@@ -29,7 +29,7 @@
     <div class="modal fade rounded" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <div class="modal-header bg-dark text-light">
+                <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Add Book</h5>
                     <button type="button" class="close text-light" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true" >&times;</span>
